--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vapi-ai/web": "^2.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "query-string": "^9.2.0",
